# jjscope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
.claude/skills/verify/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: publish.yml  test.yml
docs/: keybindings.md
src/: app.rs  env.rs  main.rs
src/commander/: bookmarks.rs  files.rs  jj.rs  log.rs  mod.rs
src/commander/snapshots/: blazingjj__commander__files__tests__get_file_diff-3.snap  jjscope__commander__bookmarks__tests__get_bookmark_show.snap  jjscope__commander__files__tests__get_file_diff-5.snap  jjscope__commander__files__tests__get_file_diff.snap  jjscope__commander__log__tests__get_commit_show.snap  jjscope__commander__log__tests__get_log.snap
src/keybinds/: config.rs  log_tab.rs  mod.rs
src/ui/: bookmarks_tab.rs  files_tab.rs  loader_popup.rs  log_tab.rs  mod.rs
src/ui/dialog/: bookmark_set.rs  command.rs  help.rs  loader.rs  message.rs  mod.rs  rebase.rs
src/ui/panel/: log_panel.rs
