[package]
name = "jjscope"
description = "TUI for Jujutsu/jj"
version = "0.8.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sswatson/jjscope"
authors = ["Charles Crete <charles@cretezy.com>"]
rust-version = "1.88.0"

[package.metadata.binstall]
# `cargo binstall` gets confused by the `v` before versions in archive name.
pkg-url = "{ repo }/releases/download/v{ version }/jjscope-v{ version }-{ target }.{ archive-format }"


[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
insta = { version = "1.45.0", features = ["filters"] }
itertools = "0.14.0"
ratatui = { version = "0.30.0", features = [
  "serde",
  "unstable-rendered-line-info",
] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
shell-words = "1.1.1"
tempfile = "3.24.0"
thiserror = "2.0.17"
throbber-widgets-tui = "0.11.0"
toml = "1.1.0"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
ratatui-textarea = "0.9.1"
tui_confirm_dialog = "0.4.0"
version-compare = "0.2.1"

# Release build optimize size.
# Run strip manually after build to reduce further.
[profile.release]
lto = true
opt-level = 's'     # Optimize for size.
codegen-units = 1
strip = "symbols"
